# cpp_FeedforwardNeuralNetwork_from_scratch

./: .gitignore  CMakeLists.txt  CppCheatsheet.md  Makefile  NOTES.md  README.md
.cache/clangd/index/: activation_func.cpp.C2171F7453AFE0F1.idx  activation_func.hpp.7B0FE7ACA1BEA734.idx  config.hpp.A3CB1C64EC6506E5.idx  layer.cpp.FBD762F9E00BBBA1.idx  layer.hpp.339C3B4CBA9C879F.idx  loss_func.cpp.79B2E2B21B217412.idx  loss_func.hpp.1A54308D3206D1D6.idx  math.cpp.B6F161004EF45161.idx  math.hpp.3190389D1F3E66DF.idx  model.cpp.C10562B9C3895C70.idx  model.hpp.456ECFC73B72E8E2.idx  tensor.cpp.2B7EBED146994871.idx  tensor.hpp.AFDF2ED8440C607B.idx  tensor2D.cpp.3B2ECCF073238789.idx  tensor2D.hpp.40F933845AFE0BC2.idx
apps/: main.cpp
docs/: BEST_PRACTICES.md
include/fnn/: activation_func.hpp  config.hpp  fnn.hpp  layer.hpp  loss_func.hpp  model.hpp  tensor.hpp  tensor2D.hpp
include/fnn/util/: linear_alg.hpp  math.hpp
learncpp/: HelloWorld  main  main.cpp
src/: activation_func.cpp  layer.cpp  loss_func.cpp  model.cpp  tensor.cpp  tensor2D.cpp
src/util/: math.cpp
